# datetime_matcher

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-devtime.in  requirements-devtime.txt  setup.cfg  setup.py
.github/workflows/: bumpversion.yml  publish.yml
requirements-devtime.d/: lint.in  test.in
src/datetime_matcher/: __init__.py  datetime_extractor.py  datetime_matcher.py  dfregex_lexer.py  model_types.py  regex_generator.py
test/: conftest.py  test_datetime_extractor.py  test_datetime_matcher__match.py  test_datetime_matcher__search.py  test_datetime_matcher__sub.py  test_dfregex_lexer.py  test_dfregex_parser.py  test_dfregex_sub.py  test_regex_generator.py
