[project]
name = "datetime-matcher"
version = "0.3.0"
description = "A library which extends regex with support for datetime format codes."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = [
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Stephen Zhao", email = "mail@zhaostephen.com" },
]
keywords = [
    "datetime",
    "regex",
    "datetime parsing",
    "datetime format",
    "substitution",
    "regular expression",
    "format",
    "strftime",
    "strptime",
    "parse",
    "reformat",
    "date",
    "time",
    "format code",
    "search",
    "find",
    "replace",
    "match",
]

[project.urls]
Homepage = "https://github.com/stephen-zhao/datetime-matcher"
Source = "https://github.com/stephen-zhao/datetime-matcher"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["datetime_matcher"]

[tool.uv]
dev-dependencies = [
    "bump-my-version>=1.2.1",
    "pytest>=8.4.1",
    "uv>=0.8.11",
]

[tool.bumpversion]
current_version = "0.3.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
