[metadata]
name = datetime-matcher
version = 0.2.0
author = Stephen Zhao
author_email = mail@zhaostephen.com
description = A library which extends regex with support for datetime format codes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stephen-zhao/datetime_matcher
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing
    Topic :: Utilities
keywords =
    datetime
    regex
    datetime parsing
    datetime format
    substitution
    regular expression
    format
    strftime
    strptime
    parse
    reformat
    date
    time
    format code
    search
    find
    replace
    match

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
