[metadata]
name = datetime-matcher
version = file: src/datetime_matcher/VERSION
author = Stephen Zhao
author_email = mail@zhaostephen.com
description = A library which extends regex with support for datetime format codes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stephen-zhao/datetime_matcher
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing
    Topic :: Utilities
    Typing :: Typed
keywords =
    datetime
    regex
    datetime parsing
    datetime format
    substitution
    regular expression
    format
    strftime
    strptime
    parse
    reformat
    date
    time
    format code
    search
    find
    replace
    match

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
* = py.typed, VERSION

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self\.debug
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:

[coverage:run]
omit = .venv/*,test/*,docs/*

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100

[flake8]
ignore = W503,E203,B950,E501,C81,WPS210,WPS213,WPS305,WPS337,WPS348
min-name-length = 3
max-try-body-length = 2
max-complexity = 18
select = B,C,E,F,N400,N8,W,T4
exclude = test, .venv, build, docs
per-file-ignores =
    **/__init__.py:F401

[mypy]
warn_redundant_casts = True
warn_return_any = True
warn_unused_ignores = True
warn_unused_configs = True
no_implicit_optional = True
